fixed spacing problem in Iphon 6, was cause by navbar-header class with a right margin of 15px

--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -11,6 +11,13 @@ html {
   /*font-weight: bolder;*/
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 body {
   margin: 0 auto;
@@ -4149,7 +4156,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .container-fluid > .navbar-header,
 .container > .navbar-collapse,
 .container-fluid > .navbar-collapse {
-  margin-right: -15px;
+  /* margin-right: -15px; */
   margin-left: -15px;
   /* margin-bottom: -55px; */
   height: auto;
